<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:width="3dp"
    android:color="#B1BCBE"
    android:radius="10dp"
    android:left="0dp"
    android:top="0dp"
    android:right="0dp"
    android:bottom="0dp">


    <TextView
        android:id="@+id/summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/summary"
        android:textSize="30sp"
        android:background="#b0b0b0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/temp"
                android:visibility="visible" />
            <TextView
                android:id="@+id/hum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hum"
                android:visibility="visible" />
            <TextView
                android:id="@+id/wind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wind"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/avgTemp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/avgTemp" />
            <TextView
                android:id="@+id/rain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rain" />
        </LinearLayout>



    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:shrinkColumns="*">


        <TableRow
            android:id="@+id/row1"
            android:paddingTop="0dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <!-- Add elements/columns in the first row-->

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00D9FF"
                android:padding="18dip"
                android:text="@string/hour1"
                android:textColor="#000"
                android:textSize="12dp" />


            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#b0b0b0"
                android:padding="18dip"
                android:text="@string/hour2"
                android:textColor="#000"
                android:textSize="12dp" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00D9FF"
                android:padding="18dip"
                android:text="@string/hour3"
                android:textColor="#000"
                android:textSize="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#b0b0b0"
                android:padding="18dip"
                android:text="@string/hour4"
                android:textColor="#000"
                android:textSize="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00D9FF"
                android:padding="18dip"
                android:text="@string/hour5"
                android:textColor="#000"
                android:textSize="12dp" />

        </TableRow>


        <TableRow
            android:id="@+id/row2"
            android:paddingTop="0dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <!-- Add elements/columns in the first row-->

            <TextView

                android:id="@+id/hour1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00D9FF"
                android:padding="18dip"
                android:text="@string/temp1"
                android:textColor="#000"
                android:textSize="12dp"
                />


            <TextView

                android:id="@+id/hour2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#b0b0b0"
                android:padding="18dip"
                android:text="@string/temp2"
                android:textColor="#000"
                android:textSize="12dp" />

            <TextView

                android:id="@+id/hour3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00D9FF"
                android:padding="18dip"
                android:text="@string/temp3"
                android:textColor="#000"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/hour4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#b0b0b0"
                android:padding="18dip"
                android:text="@string/temp4"
                android:textColor="#000"
                android:textSize="12dp" />

            <TextView

                android:id="@+id/hour5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00D9FF"
                android:padding="18dip"
                android:text="@string/temp5"
                android:textColor="#000"
                android:textSize="12dp" />

        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:shrinkColumns="*">


        <TableRow
            android:id="@+id/row3"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00D9FF"
                android:padding="18dip"
                android:text="@string/day"
                android:textColor="#000"
                android:textSize="10dp"/>

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00D9FF"
                android:padding="18dip"
                android:text="@string/day1"
                android:textColor="#000"
                android:textSize="10dp" />


            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#b0b0b0"
                android:padding="18dip"
                android:text="@string/day2"
                android:textColor="#000"
                android:textSize="10dp" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00D9FF"
                android:padding="18dip"
                android:text="@string/day3"
                android:textColor="#000"
                android:textSize="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#b0b0b0"
                android:padding="18dip"
                android:text="@string/day4"
                android:textColor="#000"
                android:textSize="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00D9FF"
                android:padding="18dip"
                android:text="@string/day5"
                android:textColor="#000"
                android:textSize="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#b0b0b0"
                android:padding="18dip"
                android:text="@string/day6"
                android:textColor="#000"
                android:textSize="10dp" />

        </TableRow>


        <TableRow
            android:id="@+id/row4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <!-- Add elements/columns in the first row-->

            <TextView
                android:id="@+id/high"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00D9FF"
                android:padding="18dip"
                android:text="@string/high"
                android:textColor="#000"
                android:textSize="10dp" />

            <TextView

                android:id="@+id/day1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00D9FF"
                android:padding="18dip"
                android:text="@string/day1temp"
                android:textColor="#000"
                android:textSize="10dp" />


            <TextView

                android:id="@+id/day2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#b0b0b0"
                android:padding="18dip"
                android:text="@string/day2temp"
                android:textColor="#000"
                android:textSize="10dp" />

            <TextView

                android:id="@+id/day3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00D9FF"
                android:padding="18dip"
                android:text="@string/day3temp"
                android:textColor="#000"
                android:textSize="10dp" />

            <TextView
                android:id="@+id/day4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#b0b0b0"
                android:padding="18dip"
                android:text="@string/day4temp"
                android:textColor="#000"
                android:textSize="10dp" />

            <TextView

                android:id="@+id/day5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00D9FF"
                android:padding="18dip"
                android:text="@string/day5temp"
                android:textColor="#000"
                android:textSize="10dp" />

                <TextView
                android:id="@+id/day6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#b0b0b0"
                android:padding="18dip"
                android:text="@string/day6temp"
                android:textColor="#000"
                android:textSize="10dp" />

        </TableRow>

        <TableRow
            android:id="@+id/row5"
            android:paddingTop="0dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <!-- Add elements/columns in the first row-->

            <TextView
                android:id="@+id/low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00D9FF"
                android:padding="18dip"
                android:text="@string/low"
                android:textColor="#000"
                android:textSize="10dp" />

            <TextView

                android:id="@+id/day1low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00D9FF"
                android:padding="18dip"
                android:text="@string/day1low"
                android:textColor="#000"
                android:textSize="10dp" />


            <TextView

                android:id="@+id/day2low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#b0b0b0"
                android:padding="18dip"
                android:text="@string/day2low"
                android:textColor="#000"
                android:textSize="10dp" />

            <TextView

                android:id="@+id/day3low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00D9FF"
                android:padding="18dip"
                android:text="@string/day3low"
                android:textColor="#000"
                android:textSize="10dp" />

            <TextView
                android:id="@+id/day4low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#b0b0b0"
                android:padding="18dip"
                android:text="@string/day4low"
                android:textColor="#000"
                android:textSize="10dp" />

            <TextView

                android:id="@+id/day5low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00D9FF"
                android:padding="18dip"
                android:text="@string/day5low"
                android:textColor="#000"
                android:textSize="10dp" />

            <TextView
                android:id="@+id/day6low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#b0b0b0"
                android:padding="18dip"
                android:text="@string/day6low"
                android:textColor="#000"
                android:textSize="10dp" />

        </TableRow>


    </TableLayout>

    <EditText
        android:id="@+id/inputDate"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="text"
        android:hint="@string/edit_message" />
    <EditText
        android:id="@+id/inputHour"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="text"
        android:hint="@string/edit_message2" />

    <Button
        android:id="@+id/button_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/button_send"/>

    <TextView
        android:id="@+id/timeMachineTemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/timeMachinetemp"
        android:visibility="invisible" />
    <TextView
        android:id="@+id/errortext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/errortext"
        android:visibility="invisible" />

</LinearLayout>